# Gemesis

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: agent.h  game.h  log.h  main.cpp  mcts.cpp  minimax.cpp  move.h  settings.h  types.h  utils.h
